# hydro-playground

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  TODO  config.h.in  format.py
.github/workflows/: build_and_test.yml  godunov.yml  latex.yml  muscl.yml
doc/rtd/source/: conf.py  index.rst
doc/rtd/source/Frameworks/: index.rst
doc/rtd/source/GPUAcceleration/: cuda.rst  hip.rst  index.rst  openacc.rst  openmp.rst
doc/rtd/source/MulticoreParallelism/: cpp.rst  index.rst  openmp.rst  openmp_tasks.rst  tbb.rst
doc/rtd/source/Results/: index.rst
doc/tex/documentation/: Makefile  README.md  format_specification.tex  getting_started.tex  implementation_details.tex  introduction.tex
doc/tex/theory/: boundary_conditions.tex  hydro-MUSCL.tex  hydro.tex  ideal_gases.tex  riemann.tex  theory.tex
examples/: .gitignore  example_paramfile.txt
examples/CornerExplosion/: corner_explosion.params  corner_explosion.py  corner_explosion.txt  run.sh
examples/KelvinHelmholtz/: kelvin-helmholtz.py  kh.params  run.sh
examples/KelvinHelmholtzBenchmark/: kelvin_helmholtz.py  kh.params  run.sh
examples/SedovBlast/: run.sh  sedov.params  sedov.py  sedov_params.txt
examples/tinyArbitrary/: paramfile.txt  run.sh
examples/tinyTwostate/: paramfile.txt  run.sh
src/: BoundaryConditions.cpp  BoundaryConditions.h  CMakeLists.txt  Cell.cpp  Cell.h  Config.h.in  Constants.h  Dummy.cu  Dummy.cuh  Gas.cpp  Gas.h  Grid.cpp  Grid.cu  Grid.h  IO.cpp  IO.cpph  IO.h  Limiter.h  Logging.cpp  Logging.h  Parameters.cpp  Parameters.h  Riemann.h  RiemannBase.cpp  RiemannBase.h  RiemannExact.h  RiemannHLLC.cpp  RiemannHLLC.h  Solver.h  SolverBase.cpp  SolverBase.h  SolverGodunov.cpp  SolverGodunov.h  SolverMUSCL.cpp  SolverMUSCL.h  Timer.h  Utils.cpp  Utils.h  Version.cpp.in  Version.h  (+5 more)
src/Limiter/: LimiterMinmod.h  LimiterVanLeer.h
src/Riemann/: RiemannBase.cpp  RiemannBase.h  RiemannExact.cpp  RiemannExact.h  RiemannHLLC.cpp  RiemannHLLC.h
src/Solver/: SolverBase.cpp  SolverBase.cu  SolverBase.h  SolverGodunov.cpp  SolverGodunov.h  SolverMUSCL.cpp  SolverMUSCL.h
src/solver/: CMakeLists.txt~  godunov.cpp  godunov.h
tests/: CMakeLists.txt  test_gas.cpp  test_ic_twostate.txt  test_io.cpp  test_logging.cpp
tex/documentation/: developer_notes.tex  documentation.tex  format_specification.tex  getting_started.tex  header.tex  implementation_details.tex  introduction.tex
tex/theory/: Makefile  dimensional_splitting.tex  header.tex  hydro-MUSCL.tex  hydro-godunov.tex  ideal_gases.tex  introduction.tex  limiters.tex  references.bib  riemann.tex
